--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
+TOKEN_EXPIRATION= 14d
+
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=root
 
 
-#JWT_SECRET_KEY=your-secret-key
+JWT_SECRET_KEY=your-secret-key
 
 ORIGIN=dsw
 
