--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.4",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "helmet": "^7.0.0",
     "jimp": "^0.22.8",
     "joi": "^17.9.2",
