Se agrego la creacion y edicion de clientes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@auth-module/*": ["src/auth/*"],
       "@usuario-module/*": ["src/usuarios/*"],
+      "@cliente-module/*": ["src/clientes/*"],
       "@shared-module/*": ["src/shared/*"]
     }
   }
