Se agregaron los metodos para crear y buscar habitaciones y tipo de habitaciones por ID

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@auth-module/*": ["src/auth/*"],
       "@usuario-module/*": ["src/usuarios/*"],
       "@cliente-module/*": ["src/clientes/*"],
-      "@shared-module/*": ["src/shared/*"]
+      "@shared-module/*": ["src/shared/*"],
+      "@habitacion-module/*": ["src/habitaciones/*"]
     }
   }
 }
