--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "dayjs": "^1.11.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
