--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 TOKEN_EXPIRATION= 1d
 
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_USERNAME=root
+DB_USERNAME=dsw-backend
 DB_PASSWORD=root
 
 
