--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "helmet": "^7.0.0",
     "jimp": "^0.22.8",
     "joi": "^17.9.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@flydotio/node-demo": "^0.2.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/testing": "^10.0.4",
     "@types/bcrypt": "^5.0.0",
@@ -68,5 +69,4 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   }
-
 }
